# ec-jones.github.io

./: .gitignore  blog-builer.cabal  index.html  site.hs
_cache/: -3018158316210180534  6712876889041999715  8791962016881733505
_site/: index.html
_site/posts/: boids.html
css/: default.css
docs/: index.html
docs/css/: default.css
docs/posts/: boids.html  cycleq.html  regular-effects.html
drafts/: regular-effects.md
hakyll/: .gitignore  default.css  index.html  site.hs
hakyll/css/: default.css
hakyll/docs/: index.html
hakyll/posts/: boids.md  cycleq.md  regular-effects.md
hakyll/publications/: CycleQ.md  HOMSL.md  Intensional.md
hakyll/resources/cv/: cv.tex
hakyll/templates/: default.html
posts/: boids.md  regular-effects.md
resources/: style.css
resources/cv/: Eddie Jones - CV.tex  cv.tex
templates/: default.html
